data/all_generated_tests/raw_wast_tests/br_table_EdgeCaseFailuresinbr_table_2479.wast
;; 9. **Test Description:**    Use a br_table instruction with varied operand types in a mixed operand environment to see if the correct and intended unwinding is maintained, especially focusing on multi-type stack conditions.    - **Specific Constraint:** Validation of type constraint adherence and stack management.    - **Edge Case Relation:** Type-mismatch mishandling can lead to state inconsistencies.

(assert_invalid
  (module
    (func (param i32 i64) (result i64)
      (block (result i64)
        (i64.const 0)
        (block
          (br_table 0 1 (i32.const 1) (local.get 1) (local.get 0))
         )
      )
    )
  )
  "type mismatch"
)